--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     image: "${NETWORK_NODE_IMAGE_PREFIX}${NETWORK_NODE_IMAGE_NAME}:${NETWORK_NODE_IMAGE_TAG}"
     container_name: network-node
     user: root
-    restart: unless-stopped
+    restart: always
     mem_swappiness: 0
     mem_limit: "${NETWORK_NODE_MEM_LIMIT}"
     memswap_limit: "${NETWORK_NODE_MEM_LIMIT}"
@@ -20,22 +20,19 @@ services:
       nofile:
         soft: 65536
         hard: 65536
+      memlock:
+        soft: -1
+        hard: -1
     environment:
       JAVA_HEAP_MIN: "${PLATFORM_JAVA_HEAP_MIN}"
       JAVA_HEAP_MAX: "${PLATFORM_JAVA_HEAP_MAX}"
-      JAVA_OPTS: "${PLATFORM_JAVA_OPTS} -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/opt/hgcapp/logs/heapdump.hprof -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:InitiatingHeapOccupancyPercent=70"
+      JAVA_OPTS: "${PLATFORM_JAVA_OPTS} -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/opt/hgcapp/logs/heapdump.hprof -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:InitiatingHeapOccupancyPercent=70 -Xms${PLATFORM_JAVA_HEAP_MIN} -Xmx${PLATFORM_JAVA_HEAP_MAX}"
+      NODE_DETAILS: "0.0.3"
     healthcheck:
-      test:
-        [
-          "CMD",
-          "grep",
-          "-Ei",
-          "Now current platform status = ACTIVE|Hedera - HederaNode#0 is ACTIVE",
-          "/opt/hgcapp/services-hedera/HapiApp2.0/output/hgcaa.log"
-        ]
-      interval: 15s
-      timeout: 10s
-      retries: 20
+      test: ["CMD-SHELL", "if [ -f /opt/hgcapp/services-hedera/HapiApp2.0/output/hgcaa.log ]; then grep -Ei 'Now current platform status = ACTIVE|Hedera - HederaNode#0 is ACTIVE' /opt/hgcapp/services-hedera/HapiApp2.0/output/hgcaa.log || exit 1; else exit 1; fi"]
+      interval: 30s
+      timeout: 20s
+      retries: 30
       start_period: 300s
     logging:
       driver: "json-file"
@@ -44,9 +41,9 @@ services:
         max-file: "10"
     depends_on:
       haveged:
-        condition: service_started
-      record-streams-uploader:
-        condition: service_started
+        condition: service_healthy
+      minio:
+        condition: service_healthy
     networks:
       network-node-bridge:
         ipv4_address: 172.27.0.3
