Update docker file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     image: "${NETWORK_NODE_IMAGE_PREFIX}${NETWORK_NODE_IMAGE_NAME}:${NETWORK_NODE_IMAGE_TAG}"
     container_name: network-node
     user: root
-    restart: always
+    restart: unless-stopped
     mem_swappiness: 0
     mem_limit: "${NETWORK_NODE_MEM_LIMIT}"
     memswap_limit: "${NETWORK_NODE_MEM_LIMIT}"
@@ -20,19 +20,22 @@ services:
       nofile:
         soft: 65536
         hard: 65536
-      memlock:
-        soft: -1
-        hard: -1
     environment:
       JAVA_HEAP_MIN: "${PLATFORM_JAVA_HEAP_MIN}"
       JAVA_HEAP_MAX: "${PLATFORM_JAVA_HEAP_MAX}"
-      JAVA_OPTS: "${PLATFORM_JAVA_OPTS} -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/opt/hgcapp/logs/heapdump.hprof -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:InitiatingHeapOccupancyPercent=70 -Xms${PLATFORM_JAVA_HEAP_MIN} -Xmx${PLATFORM_JAVA_HEAP_MAX}"
-      NODE_DETAILS: "0.0.3"
+      JAVA_OPTS: "${PLATFORM_JAVA_OPTS} -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/opt/hgcapp/logs/heapdump.hprof -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:InitiatingHeapOccupancyPercent=70"
     healthcheck:
-      test: ["CMD-SHELL", "if [ -f /opt/hgcapp/services-hedera/HapiApp2.0/output/hgcaa.log ]; then grep -Ei 'Now current platform status = ACTIVE|Hedera - HederaNode#0 is ACTIVE' /opt/hgcapp/services-hedera/HapiApp2.0/output/hgcaa.log || exit 1; else exit 1; fi"]
-      interval: 30s
-      timeout: 20s
-      retries: 30
+      test:
+        [
+          "CMD",
+          "grep",
+          "-Ei",
+          "Now current platform status = ACTIVE|Hedera - HederaNode#0 is ACTIVE",
+          "/opt/hgcapp/services-hedera/HapiApp2.0/output/hgcaa.log"
+        ]
+      interval: 15s
+      timeout: 10s
+      retries: 20
       start_period: 300s
     logging:
       driver: "json-file"
@@ -41,9 +44,9 @@ services:
         max-file: "10"
     depends_on:
       haveged:
-        condition: service_healthy
-      minio:
-        condition: service_healthy
+        condition: service_started
+      record-streams-uploader:
+        condition: service_started
     networks:
       network-node-bridge:
         ipv4_address: 172.27.0.3
@@ -144,19 +147,17 @@ services:
     image: "${UPLOADER_IMAGE_PREFIX}uploader-mirror:${UPLOADER_IMAGE_TAG}"
     container_name: record-sidecar-uploader
     user: root
-    restart: always
+    restart: unless-stopped
     depends_on:
       minio:
-        condition: service_healthy
+        condition: service_started
     networks:
       - cloud-storage
     environment:
       DEBUG: "true"
-      # Reaper settings for better data retention
       REAPER_ENABLE: "true"
-      REAPER_MIN_KEEP: "24"  # Keep at least 24 hours of records
-      REAPER_INTERVAL: "60"  # Check every hour
-      # Upload settings
+      REAPER_MIN_KEEP: "1"
+      REAPER_INTERVAL: "5"
       S3_ENABLE: "true"
       GCS_ENABLE: "false"
       SIG_REQUIRE: "false"
@@ -166,22 +167,8 @@ services:
       BUCKET_PATH: "recordstreams/record0.0.3/sidecar"
       S3_ACCESS_KEY: "minioadmin"
       S3_SECRET_KEY: "minioadmin"
-      # Retry settings
-      MAX_RETRIES: "5"
-      RETRY_DELAY: "30"
-      UPLOAD_TIMEOUT: "300"
-      # Buffer settings
-      BUFFER_SIZE: "104857600"  # 100MB buffer
-      MAX_CONCURRENT_UPLOADS: "3"
-    healthcheck:
-      test: ["CMD", "ps", "aux", "|", "grep", "mirror.py", "|", "grep", "-v", "grep"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 20s
     volumes:
-      - "${NETWORK_NODE_LOGS_ROOT_PATH}/recordStreams/record0.0.3/sidecar:/sidecar-files:rw"
-      - "${NETWORK_NODE_LOGS_ROOT_PATH}/recordStreams/record0.0.3/backup:/backup-files:rw"
+      - "${NETWORK_NODE_LOGS_ROOT_PATH}/recordStreams/record0.0.3/sidecar:/sidecar-files"
     command:
       - /usr/bin/env
       - ${PYTHON_VERSION}
@@ -189,45 +176,27 @@ services:
       - --linux
       - --watch-directory
       - /sidecar-files
-      - --backup-directory
-      - /backup-files
       - --s3-endpoint
       - http://minio:9000
-      - --retry-failed
-      - --verify-upload
       - --debug
 
   minio:
     image: ghcr.io/mhga24/minio/minio
     container_name: minio
     entrypoint: sh
-    command: -c 'mkdir -p /minio/data/hedera-streams && minio server /minio/data --console-address ":9001" --address ":9000"'
+    command: -c 'mkdir -p /data/hedera-streams && minio server /data --console-address ":9001"'
     environment:
       MINIO_ROOT_USER: "${MINIO_ROOT_USER}"
       MINIO_ROOT_PASSWORD: "${MINIO_ROOT_PASSWORD}"
       MINIO_ACCESS_KEY: minioadmin
       MINIO_SECRET_KEY: minioadmin
-      MINIO_BROWSER_REDIRECT_URL: http://localhost:9001
-      MINIO_COMPRESSION_ENABLE: "on"
-      MINIO_COMPRESSION_EXTENSIONS: ".txt,.log,.csv,.json,.tar,.xml,.bin"
-      MINIO_COMPRESSION_MIME_TYPES: "text/*,application/json,application/xml,application/octet-stream"
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
     networks:
       - cloud-storage
     ports:
       - "9000:9000"
       - "9001:9001"
     volumes:
-      - "minio-data:/minio/data"
-    ulimits:
-      nofile:
-        soft: 65536
-        hard: 65536
+      - "minio-data:/data"
 
   db:
     image: "${MIRROR_POSTGRES_IMAGE}"
@@ -241,23 +210,6 @@ services:
       POSTGRES_PASSWORD: postgres_password
       REST_PASSWORD: mirror_api_pass
       ROSETTA_PASSWORD: mirror_rosetta_pass
-      # Performance Tuning
-      POSTGRES_SHARED_BUFFERS: 2GB
-      POSTGRES_EFFECTIVE_CACHE_SIZE: 6GB
-      POSTGRES_MAINTENANCE_WORK_MEM: 512MB
-      POSTGRES_RANDOM_PAGE_COST: 1.1
-      POSTGRES_EFFECTIVE_IO_CONCURRENCY: 200
-      POSTGRES_WORK_MEM: 16MB
-      POSTGRES_MAX_WORKER_PROCESSES: 8
-      POSTGRES_MAX_PARALLEL_WORKERS_PER_GATHER: 4
-      POSTGRES_MAX_PARALLEL_WORKERS: 8
-      POSTGRES_MAX_PARALLEL_MAINTENANCE_WORKERS: 4
-      POSTGRES_CHECKPOINT_COMPLETION_TARGET: 0.9
-      POSTGRES_SYNCHRONOUS_COMMIT: 'off'
-      POSTGRES_MAX_WAL_SIZE: 4GB
-      POSTGRES_MIN_WAL_SIZE: 2GB
-      POSTGRES_WAL_BUFFERS: 16MB
-      POSTGRES_DEFAULT_STATISTICS_TARGET: 500
     networks:
       - mirror-node
     ports:
@@ -266,30 +218,11 @@ services:
     stop_grace_period: 2m
     stop_signal: SIGTERM
     tty: true
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
-    ulimits:
-      nofile:
-        soft: 65536
-        hard: 65536
-      memlock:
-        soft: -1
-        hard: -1
-    mem_swappiness: 0
-    mem_limit: "8G"
     volumes:
       - ./compose-network/mirror-node/init.sh:/docker-entrypoint-initdb.d/init.sh
       - type: volume
         source: mirror-node-postgres
         target: /var/lib/postgresql/data
-      - type: tmpfs
-        target: /dev/shm
-        tmpfs:
-          size: 2g
 
   grpc:
     image: "${MIRROR_IMAGE_PREFIX}hedera-mirror-grpc:${MIRROR_GRPC_IMAGE_TAG:-${MIRROR_IMAGE_TAG}}"
@@ -625,8 +558,6 @@ volumes:
     name: mirror-node-postgres
   minio-data:
     name: minio-data
-  minio-cache:
-    name: minio-cache
   prometheus-data:
     name: prometheus-data
   grafana-data:
