--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,18 +12,13 @@ services:
     image: "${NETWORK_NODE_IMAGE_PREFIX}${NETWORK_NODE_IMAGE_NAME}:${NETWORK_NODE_IMAGE_TAG}"
     container_name: network-node
     user: root
-    restart: unless-stopped
     mem_swappiness: 0
     mem_limit: "${NETWORK_NODE_MEM_LIMIT}"
     memswap_limit: "${NETWORK_NODE_MEM_LIMIT}"
-    ulimits:
-      nofile:
-        soft: 65536
-        hard: 65536
     environment:
       JAVA_HEAP_MIN: "${PLATFORM_JAVA_HEAP_MIN}"
       JAVA_HEAP_MAX: "${PLATFORM_JAVA_HEAP_MAX}"
-      JAVA_OPTS: "${PLATFORM_JAVA_OPTS} -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/opt/hgcapp/logs/heapdump.hprof -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:InitiatingHeapOccupancyPercent=70"
+      JAVA_OPTS: "${PLATFORM_JAVA_OPTS}"
     healthcheck:
       test:
         [
@@ -33,15 +28,10 @@ services:
           "Now current platform status = ACTIVE|Hedera - HederaNode#0 is ACTIVE",
           "/opt/hgcapp/services-hedera/HapiApp2.0/output/hgcaa.log"
         ]
-      interval: 15s
+      interval: 30s
       timeout: 10s
-      retries: 20
-      start_period: 300s
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "50m"
-        max-file: "10"
+      retries: 10
+      start_period: 10s
     depends_on:
       haveged:
         condition: service_started
