--- a/.env
+++ b/.env
@@ -62,7 +62,7 @@ RELAY_LOCAL_NODE=true
 RELAY_SERVER_PORT=7546
 RELAY_E2E_HOST=http://3.11.65.249:7546
 RELAY_REDIS_ENABLED=true
-RELAY_REDIS_URL=redis://3.11.65.249:6379
+RELAY_REDIS_URL=redis://relay-cache:6379
 RELAY_FEE_HISTORY_MAX_RESULTS=10
 RELAY_DEFAULT_RATE_LIMIT=200
 RELAY_TIER_1_RATE_LIMIT=100
