--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ PLATFORM_JAVA_HEAP_MAX=2g
 PLATFORM_JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xlog:gc*:gc.log"
 
 #### Bind Mount Settings ####
-NETWORK_NODE_LOGS_ROOT_PATH=./network-logs/node
+NETWORK_NODE_LOGS_ROOT_PATH=/home/ubuntu/network-logs/node
 APPLICATION_ROOT_PATH=./compose-network/network-node
 APPLICATION_CONFIG_PATH=./compose-network/network-node/data/config
 MIRROR_NODE_CONFIG_PATH=.
