--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ PLATFORM_JAVA_HEAP_MAX=2g
 PLATFORM_JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xlog:gc*:gc.log"
 
 #### Bind Mount Settings ####
-NETWORK_NODE_LOGS_ROOT_PATH=/home/ubuntu/network-logs/node
+NETWORK_NODE_LOGS_ROOT_PATH=./network-logs/node
 APPLICATION_ROOT_PATH=./compose-network/network-node
 APPLICATION_CONFIG_PATH=./compose-network/network-node/data/config
 MIRROR_NODE_CONFIG_PATH=.
@@ -62,7 +62,7 @@ RELAY_LOCAL_NODE=true
 RELAY_SERVER_PORT=7546
 RELAY_E2E_HOST=http://3.11.65.249:7546
 RELAY_REDIS_ENABLED=true
-RELAY_REDIS_URL=redis://relay-cache:6379
+RELAY_REDIS_URL=redis://3.11.65.249:6379
 RELAY_FEE_HISTORY_MAX_RESULTS=10
 RELAY_DEFAULT_RATE_LIMIT=200
 RELAY_TIER_1_RATE_LIMIT=100
